[feat]이력서 조회 시 templateId 필터 적용 및 final_score 추가